# ai-tutor-monorepo

./: .gitignore  404.html  ARCHITECTURE.md  GATEWAY_SPEECH_INTEGRATION.md  README.md  REFACTOR_README.md  debug-config-examples.md  docker-compose.override.yml  index.html  restart-local.sh  sitemap.xml  start-local.sh  stop-local.sh  test-grpc-integration.sh  test-refactor.sh
.github/workflows/: docs.yml
assets/js/: 01a85c17.bcd2781a.js  04d5fa1f.859ccb77.js  064601cc.2e06d470.js  08af526d.76aeb771.js  0e384e19.0fd8f69a.js  0e384e19.bf4ab47f.js  11b43341.32d2dc68.js  14eb3368.b719da0d.js  17896441.33f9d590.js  18c41134.7dc10a54.js  18c41134.e638d10f.js  1df93b7f.1d045a7b.js  1e4232ab.5e0fd289.js  1e4232ab.d082d705.js  1f391b9e.be4b11f3.js  2063472f.6aeb9dee.js  2237.e28c7688.js  2e108b21.9c23bb0d.js  2edb1638.9858a8ef.js  31d8f4da.67564c4a.js  33a9c3bd.23389788.js  33fc5bb8.20ea78d7.js  36994c47.f95e4d3f.js  393be207.7e8a77e0.js  393be207.d717af52.js  406d7050.f3005650.js  40f7e4e9.e350fc63.js  533a09ca.d43abe02.js  533a09ca.ed56d60b.js  53f5caf9.c8eafb6d.js  59362658.0a639c49.js  59362658.5ff068e2.js  5c868d36.4886e0f2.js  5c868d36.5c415383.js  5e95c892.01418eb6.js  621db11d.0f8ac78e.js  6870.b15a8941.js  6875c492.72c9e6ea.js  6dca0774.514ddd37.js  73664a40.67e0b846.js  (+51 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/authors/all-sebastien-lorber-articles/: index.html
blog/authors/yangshun/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
demo_apps/: README.md
demo_apps/chat-demo/: Dockerfile  README.md  auth_helper.py  index.html  requirements.txt  server.py  setup.py
docs/: 架构设计.md
docs/api_documentation/: conversation.md  intro.md
docs/category/tutorial---basics/: index.html
docs/category/tutorial---extras/: index.html
docs/intro/: index.html
docs/prd_documentation/: one_pager.md
docs/prompt_cheatsheet/: cursor_prompt.md
docs/tech_design/: conversation_core_tech_design.md  架构设计.md
docs/tech_design/templates/: ai_tech_design_template.md
docs/templates/: ai_tech_design_template.md
docs/tutorial-basics/congratulations/: index.html
docs/tutorial-basics/create-a-blog-post/: index.html
docs/tutorial-basics/create-a-document/: index.html
docs/tutorial-basics/create-a-page/: index.html
docs/tutorial-basics/deploy-your-site/: index.html
docs/tutorial-basics/markdown-features/: index.html
docs/tutorial-extras/manage-docs-versions/: index.html
docs/tutorial-extras/translate-your-site/: index.html
gateway/: Dockerfile  go.mod  go.sum  main.go
gateway/internal/config/: config.go
gateway/internal/handler/: health.go  websocket.go
gateway/internal/manager/: websocket.go
gateway/internal/model/: types.go
gateway/pkg/proto/speech/: speech.pb.go  speech_grpc.pb.go
gateway/static/: index.html
markdown-page/: index.html
scripts/: README.md
scripts/chat_demo/: docker-compose.yml  docker-start.sh  docker-stop.sh
services/conversation-service/: .env.example  Dockerfile  README.md  app.py  doubao_client.py  example_prompt_usage.py  main.py  prompt.py  pyproject.toml  requirements.txt  test_openai_client.py  test_service.py  test_simple.py
services/conversation-service/app/api/: deps.py
services/conversation-service/app/api/doubao/: router.py
services/conversation-service/app/api/doubao/endpoints/: conversation.py
services/conversation-service/app/api/v1/: router.py
services/conversation-service/app/api/v1/endpoints/: chat.py  health.py  language.py  models.py
services/conversation-service/app/core/: security.py
services/conversation-service/config/: __init__.py  settings.py
services/conversation-service/models/: __init__.py  openai_models.py
services/conversation-service/scripts/: dev.py
services/conversation-service/services/: __init__.py  ai_service.py  auth_service.py
services/conversation-service/tests/api/: test_api.py
services/speech-service/: Dockerfile  ISE_INTEGRATION_README.md  go.mod  go.sum
services/speech-service/cmd/: main.go
services/speech-service/internal/config/: config.go
services/speech-service/internal/handler/: speech.go
services/speech-service/internal/model/: types.go
services/speech-service/internal/service/: asr.go  audio.go  ise.go  llm.go  tts.go
services/speech-service/pkg/audio/: converter.go
shared/proto/speech/: speech.proto
tools/: README.md
tools/docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
tools/docs/src/css/: custom.css
tools/docs/src/pages/: index.module.css  index.tsx  readme.md
tools/docs/static/: README-docusaurus.md  README.md
tools/proto-gen/: generate.py
voice-practice-backend/: .env.example  .gitignore  AUDIO_DEBUG.md  AUDIO_FIX.md  DEBUG.md  DEBUG_STEPS.md  README.md  WEBM_SOLUTION.md  go.mod  go.sum
voice-practice-backend/cmd/server/: main.go
voice-practice-backend/internal/config/: config.go
voice-practice-backend/internal/handler/: health.go  websocket.go
voice-practice-backend/internal/service/: asr.go  audio.go  llm.go  tts.go
voice-practice-backend/pkg/audio/: converter.go
voice-practice-backend/pkg/websocket/: manager.go
voice-practice-backend/static/: index.html
