[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversation-service"
version = "2.0.0"
description = "AI English Speaking Learning Service - Simplified"
authors = [
    {name = "AI Tutor Team", email = "team@ai-tutor.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/ai-tutor/conversation-service"
Repository = "https://github.com/ai-tutor/conversation-service.git"
Documentation = "https://ai-tutor.github.io/conversation-service"

[project.scripts]
conversation-service = "app:app"

# ========================================
# Tool Configuration
# ========================================

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disallow_any_generics = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

# ========================================
# Development Scripts
# ========================================

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[tool.hatch.envs.default.scripts]
# Development server
dev = "uvicorn app:app --reload --host 0.0.0.0 --port 8000"
# Production server  
prod = "uvicorn app:app --host 0.0.0.0 --port 8000"
# Testing
test = "pytest {args:tests}"
test-cov = "pytest --cov=app {args:tests}"
# Code quality
lint = [
    "black --check --diff {args:.}",
    "isort --check-only --diff {args:.}",
    "flake8 {args:.}",
]
format = [
    "black {args:.}",
    "isort {args:.}",
]
typecheck = "mypy {args:app.py}"

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=app --cov-report=term-missing {args:tests}" 
